export interface ModulePathItem {
  id: string; ordinal: number; title: string; summary: string; state: 'Complete' | 'Current' | 'Locked';
}
